<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bookmark"
            android:icon="@drawable/ic_bookmark_fill"
            android:title="@string/nav_item_bookmark" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_signup"
            android:title="@string/nav_item_signup"/>
        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_item_settings" />
        <item
            android:id="@+id/nav_help"
            android:title="@string/nav_item_help" />
    </group>
</menu>
